--- a/cyberble/build.gradle
+++ b/cyberble/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+version = "1.0"
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -22,6 +24,7 @@ android {
 }
 
 dependencies {
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -29,3 +32,35 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+
+//Maven设置
+ext {
+    bintrayRepo = 'maven' //maven仓库名称，直接写maven即可
+    bintrayName = 'library' //项目名称(包名)
+
+    publishedGroupId = 'com.sirius.botasky' //组织id
+    libraryName = 'cyberble' //项目名称
+    artifact = 'cyberble' //项目的通用名称
+
+    //描述性文字
+    libraryDescription = 'Android ble library'
+    //项目github上的地址
+    siteUrl = 'https://github.com/iBotasky/BleDemo'
+    //项目github上的git仓库地址
+    gitUrl = 'https://github.com/iBotasky/BleDemo.git'
+    //版本号
+    libraryVersion = '1.0.0'
+    //开发者信息设置(任意)
+    developerId = 'botasky'
+    developerName = 'botasky'
+    developerEmail = 'siriusabo@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+// 使用bintray插件
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
