--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,33 @@
 
 buildscript {
     repositories {
-        jcenter()
+        google()
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:3.1.3'
+            classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+            classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+            // NOTE: Do not place your application dependencies here; they belong
+            // in the individual module build.gradle files
+        }
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
 
-allprojects {
-    repositories {
-        jcenter()
+    allprojects {
+        repositories {
+            google()
+            maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+            maven {
+                url 'https://maven.google.com/'
+                name 'Google'
+            }
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
+}                                       
