--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,24 +29,23 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".OperationActivity"
+            android:label="@string/title_activity_operation"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
             android:name=".LibTestActivity"
             android:label="@string/title_activity_lib_test"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".OperationActivity"
-            android:label="@string/title_activity_operation"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
